--- a/public/login.html
+++ b/public/login.html
@@ -10,27 +10,28 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   </head>
   <body>
-    <div class="login-container">
+    <div class="login-page">
       <div class="login-card">
-        <div class="login-header">
-          <div class="logo">
-            <i class="fas fa-calculator"></i>
+        <header class="login-header">
+          <div class="login-logo">
+            <i class="fas fa-calculator" aria-hidden="true"></i>
           </div>
-          <h1>Bem-vindo</h1>
-          <p>Acesse sua conta para continuar</p>
+          <h1>Bem-vindo de volta</h1>
+          <p>Acesse seus painéis de encargos com segurança.</p>
+        </header>
+
+        <div class="login-tabs" role="tablist" aria-label="Selecionar modo de acesso">
+          <button class="tab-button active" data-tab="login" type="button">Entrar</button>
+          <button class="tab-button" data-tab="register" type="button">Cadastrar</button>
         </div>
 
-        <div class="login-tabs">
-          <button class="tab-button active" data-tab="login">Entrar</button>
-          <button class="tab-button" data-tab="register">Cadastrar</button>
-        </div>
+        <p class="login-caption">Use seu e-mail corporativo para acompanhar cálculos, provisões e colaboradores.</p>
 
-        <!-- Login Form -->
-        <form id="login-form" class="auth-form active">
+        <form id="login-form" class="auth-form active" novalidate>
           <div class="form-group">
             <label for="login-email">E-mail</label>
             <div class="input-wrapper">
-              <i class="fas fa-envelope"></i>
+              <i class="fas fa-envelope" aria-hidden="true"></i>
               <input type="email" id="login-email" name="email" placeholder="seu@email.com" required>
             </div>
           </div>
@@ -38,10 +39,10 @@
           <div class="form-group">
             <label for="login-password">Senha</label>
             <div class="input-wrapper">
-              <i class="fas fa-lock"></i>
+              <i class="fas fa-lock" aria-hidden="true"></i>
               <input type="password" id="login-password" name="password" placeholder="Sua senha" required>
-              <button type="button" class="toggle-password" data-target="login-password">
-                <i class="fas fa-eye"></i>
+              <button type="button" class="toggle-password" data-target="login-password" aria-label="Mostrar senha">
+                <i class="fas fa-eye" aria-hidden="true"></i>
               </button>
             </div>
           </div>
@@ -50,25 +51,24 @@
             <label class="checkbox-wrapper">
               <input type="checkbox" id="remember-me">
               <span class="checkmark"></span>
-              Lembrar de mim
+              Manter sessão ativa
             </label>
-            <a href="#" class="forgot-password">Esqueci minha senha</a>
+            <button type="button" class="link-soft" data-action="forgot-password">Esqueci minha senha</button>
           </div>
 
           <button type="submit" class="btn-primary">
-            <span class="btn-text">Entrar</span>
-            <div class="btn-loading">
+            <span class="btn-text">Entrar agora</span>
+            <div class="btn-loading" aria-hidden="true">
               <i class="fas fa-spinner fa-spin"></i>
             </div>
           </button>
         </form>
 
-        <!-- Register Form -->
-        <form id="register-form" class="auth-form">
+        <form id="register-form" class="auth-form" novalidate>
           <div class="form-group">
             <label for="register-name">Nome completo</label>
             <div class="input-wrapper">
-              <i class="fas fa-user"></i>
+              <i class="fas fa-user" aria-hidden="true"></i>
               <input type="text" id="register-name" name="name" placeholder="Seu nome completo" required>
             </div>
           </div>
@@ -76,7 +76,7 @@
           <div class="form-group">
             <label for="register-email">E-mail</label>
             <div class="input-wrapper">
-              <i class="fas fa-envelope"></i>
+              <i class="fas fa-envelope" aria-hidden="true"></i>
               <input type="email" id="register-email" name="email" placeholder="seu@email.com" required>
             </div>
           </div>
@@ -84,10 +84,10 @@
           <div class="form-group">
             <label for="register-password">Senha</label>
             <div class="input-wrapper">
-              <i class="fas fa-lock"></i>
-              <input type="password" id="register-password" name="password" placeholder="MÃ­nimo 6 caracteres" required minlength="6">
-              <button type="button" class="toggle-password" data-target="register-password">
-                <i class="fas fa-eye"></i>
+              <i class="fas fa-lock" aria-hidden="true"></i>
+              <input type="password" id="register-password" name="password" placeholder="Minimo 6 caracteres" required minlength="6">
+              <button type="button" class="toggle-password" data-target="register-password" aria-label="Mostrar senha">
+                <i class="fas fa-eye" aria-hidden="true"></i>
               </button>
             </div>
           </div>
@@ -95,10 +95,10 @@
           <div class="form-group">
             <label for="register-confirm-password">Confirmar senha</label>
             <div class="input-wrapper">
-              <i class="fas fa-lock"></i>
+              <i class="fas fa-lock" aria-hidden="true"></i>
               <input type="password" id="register-confirm-password" name="confirmPassword" placeholder="Confirme sua senha" required>
-              <button type="button" class="toggle-password" data-target="register-confirm-password">
-                <i class="fas fa-eye"></i>
+              <button type="button" class="toggle-password" data-target="register-confirm-password" aria-label="Mostrar senha">
+                <i class="fas fa-eye" aria-hidden="true"></i>
               </button>
             </div>
           </div>
@@ -113,33 +113,29 @@
 
           <button type="submit" class="btn-primary">
             <span class="btn-text">Criar conta</span>
-            <div class="btn-loading">
+            <div class="btn-loading" aria-hidden="true">
               <i class="fas fa-spinner fa-spin"></i>
             </div>
           </button>
         </form>
 
-        <div class="divider">
-          <span>ou</span>
-        </div>
-
-        <button id="btn-google" class="btn-google">
-          <svg class="google-icon" viewBox="0 0 24 24">
-            <path fill="#4285F4" d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"/>
-            <path fill="#34A853" d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"/>
-            <path fill="#FBBC05" d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"/>
-            <path fill="#EA4335" d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"/>
-          </svg>
-          Continuar com Google
-        </button>
-
-        <!-- Developer Login -->
-        <div class="dev-login">
-          <button id="btn-dev-login" class="btn-dev">
-            <i class="fas fa-code"></i>
-            Login de Desenvolvedor
-          </button>
-        </div>
+        <section class="login-support" aria-live="polite">
+          <div>
+            <span class="login-support__badge">Suporte humano</span>
+            <h2>Recupere ou ative acessos rapidamente</h2>
+            <p>Equipe dedicada em horário comercial. Resposta média em 30 minutos.</p>
+          </div>
+          <div class="login-support__actions">
+            <button id="btn-support" class="support-button" type="button">
+              <i class="fab fa-whatsapp" aria-hidden="true"></i>
+              Falar com suporte
+            </button>
+            <button id="btn-dev-login" class="btn-dev" type="button">
+              <i class="fas fa-code" aria-hidden="true"></i>
+              Login de Desenvolvedor
+            </button>
+          </div>
+        </section>
 
         <div id="message" class="message" aria-live="polite"></div>
       </div>
