--- a/public/login.html
+++ b/public/login.html
@@ -17,7 +17,7 @@
             <i class="fas fa-calculator" aria-hidden="true"></i>
           </div>
           <h1>Bem-vindo de volta</h1>
-          <p>Acesse seus painÈis de encargos com seguranÁa.</p>
+          <p>Acesse seus pain√©is de encargos com seguran√ßa.</p>
         </header>
 
         <div class="login-tabs" role="tablist" aria-label="Selecionar modo de acesso">
@@ -25,7 +25,7 @@
           <button class="tab-button" data-tab="register" type="button">Cadastrar</button>
         </div>
 
-        <p class="login-caption">Use seu e-mail corporativo para acompanhar c·lculos, provisıes e colaboradores.</p>
+        <p class="login-caption">Use seu e-mail corporativo para acompanhar c√°lculos, provis√µes e colaboradores.</p>
 
         <form id="login-form" class="auth-form active" novalidate>
           <div class="form-group">
@@ -47,14 +47,7 @@
             </div>
           </div>
 
-          <div class="form-options">
-            <label class="checkbox-wrapper">
-              <input type="checkbox" id="remember-me">
-              <span class="checkmark"></span>
-              Manter sess„o ativa
-            </label>
-            <button type="button" class="link-soft" data-action="forgot-password">Esqueci minha senha</button>
-          </div>
+          
 
           <button type="submit" class="btn-primary">
             <span class="btn-text">Entrar agora</span>
@@ -103,13 +96,7 @@
             </div>
           </div>
 
-          <div class="form-options">
-            <label class="checkbox-wrapper">
-              <input type="checkbox" id="accept-terms" required>
-              <span class="checkmark"></span>
-              Aceito os <a href="#" class="terms-link">termos de uso</a>
-            </label>
-          </div>
+          
 
           <button type="submit" class="btn-primary">
             <span class="btn-text">Criar conta</span>
@@ -123,7 +110,7 @@
           <div>
             <span class="login-support__badge">Suporte humano</span>
             <h2>Recupere ou ative acessos rapidamente</h2>
-            <p>Equipe dedicada em hor·rio comercial. Resposta mÈdia em 30 minutos.</p>
+            <p>Equipe dedicada em hor√°rio comercial. Resposta m√©dia em 30 minutos.</p>
           </div>
           <div class="login-support__actions">
             <button id="btn-support" class="support-button" type="button">
@@ -138,6 +125,7 @@
         </section>
 
         <div id="message" class="message" aria-live="polite"></div>
+        <footer class="login-footer">Contato: <a href="mailto:contato@simulador.auditoriaemfoco.com">contato@simulador.auditoriaemfoco.com</a></footer>
       </div>
     </div>
 
